Explicitly mark inlined functions with |inline| & drop NS_COM since we rely upon these functions being inlined.  Works around mingw gcc bustage. Bug #226609 r=darin sr=dbaron